jump fix

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -13,6 +13,7 @@
 
 .carouselcontent > img {
   display: none;
+  overflow: hidden;
 }
 
 .carouselbuttonmacbook{
